Issue #5: Got draggable working with a handle
Quick-and-dirty solution: use a div as a handle for dragging the editor.
Issues remaining:

- Weird overlap of editor with other elements
- Use of hard-coded IDs is too rigid and not extensible to multiple
  editors
- Resizable not yet working

--- a/static/css/edit.css
+++ b/static/css/edit.css
@@ -1,3 +1,4 @@
+/*
 #viewer, #editor {
   position: absolute;
   top: 0;
@@ -7,13 +8,27 @@
   left: 0;
   right: 50%;
 }
+*/
+#editor {
+  border: 2px solid grey;
+  float: left;
+  background: white;
+}
 #ace {
-  width: 100%;
-  height: 100%;
+  position: relative !important;
+  width: 400px;
+  height: 600px;
   border: 1px solid grey;
 }
+#editor_handle {
+  background: grey;
+}
+
 #viewer {
+  position: absolute;
+  top: 0;
   left: 50%;
+  bottom: 0;
   right: 0;
 }
 #viewer iframe {
